Fixed ability to scroll if the page is too big (especially for mobile).  Made selecting a plan get a focus outline for keyboard nav.  Polished spacing.  It's looking good and complete now.  Really I think all I have to do is error handling on the form and commenting the code up.

--- a/signup-flow/src/styles/base/_global.scss
+++ b/signup-flow/src/styles/base/_global.scss
@@ -3,6 +3,11 @@
 * {
   border-radius: 10px;
   border-style: none;
+
+  &:focus {
+    box-shadow: 0 0 0 2px variables.$light-blue;
+    border: none;
+  }
 }
 
 h1 {
@@ -34,4 +39,10 @@ button:hover {
   position: absolute;
   width: 1px;
   white-space: nowrap;
+}
+
+@media screen and (min-width: variables.$large-breakpoint) {
+  header { 
+    margin-bottom: 2.25rem;
+  }
 }
