--- a/signup-flow/src/styles/components/pages/selectplan.scss
+++ b/signup-flow/src/styles/components/pages/selectplan.scss
@@ -26,6 +26,10 @@
       background-color: variables.$magnolia;
     }
 
+    &:focus-within {
+      box-shadow: 0 0 0 2px variables.$light-blue;
+    }
+
     img {
       margin: .25em 0 0 0;
     }
