--- a/signup-flow/src/styles/components/progressbar.scss
+++ b/signup-flow/src/styles/components/progressbar.scss
@@ -41,6 +41,7 @@
 
   .step {
     display: none;
+    text-transform: uppercase;    
 
     .step-num {
       font-size: .75rem;
